---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Fixed a crash when trying to open the calculator dialog
    - Fixed a crash when trying to copy/paste items
    - Fixed that 0-ed items were still being shown on Districts
    - Fixed that putting items into a combinator would always add them as per second instead of per current timescale

---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: 13. 11. 2024
  Features:
    - Redid the District items view, splitting them into products and ingredients only, and indicating where a surplus or deficit is present
  Bugfixes:
    - Fixed a couple of migration issues when migrating from 1.1

---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: 12. 11. 2024
  Bugfixes:
    - Tried fixing a common crash related to multiplayer latency (#219)
    - Fixed that satellite science recipes didn't include a satellite ingredient (#397)
    - Fixed a crash when trying to confirm a decimal beacon amount by way of a mathematical expression
    - Fixed a crash when changing to a machine that uses fluid fuels
    - Fixed that items in inventory weren't detected in the utility dialog
    - Fixed that the utility dialog machine and module section didn't take quality into account
    - Fixed that the custom rocket recipes didn't consider rocket part recipe productivity
    - Fixed an issue where copying fuels didn't properly check for compatibility
    - Fixed a migration issue that erroniously marked fuel as invalid
    - Fixed an issue where cancelling the machine dialog would reset fuel amounts

---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 28. 10. 2024
  Bugfixes: